--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    
+    <!-- header section start -->
+    <header>
+        <nav>
+            <div class="nav-container">
+                <div class="logo-container">
+                    <img src="./images/Frame.png" alt="">
+                    <p><span class="logo-title-g">G</span>amer</p>
+                </div>
+                <div class="nav-items-container">
+                    <ul>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Developers</a></li>
+                        <li class="spesial-nav"><a href="">Follow Us On<i id="red" class="fa-brands fa-youtube"></i><i class="fa-brands fa-tiktok"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- header section end -->
 </body>
 </html>
