online game section added

--- a/index.html
+++ b/index.html
@@ -12,23 +12,73 @@
 <body>
     <!-- header section start -->
     <header>
-        <nav>
-            <div class="nav-container">
-                <div class="logo-container">
+        <div class="header-nav-container">
+            <nav class="nav-container">
+                <div class="logo">
                     <img src="./images/Frame.png" alt="">
-                    <p><span class="logo-title-g">G</span>amer</p>
+                    <h2><span>G</span>amer</h2>
                 </div>
-                <div class="nav-items-container">
-                    <ul>
-                        <li><a href="">About Us</a></li>
-                        <li><a href="">Developers</a></li>
-                        <li class="spesial-nav"><a href="">Follow Us On<i id="red" class="fa-brands fa-youtube"></i><i class="fa-brands fa-tiktok"></i></a></li>
+                <ul class="nav-menu">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Developers</a></li>
+                    <li class="flow-us-btn"><a href="#">
+                        Follow Us On
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- navbar end -->
+        <!-- Start banner section -->
+        <div class="banner-section">
+            <div class="banner-container">
+                <div class="banner-content">
+                    <h3 class="section-title">Play Like The</h3>
+                    <h1>G.O.A.T.</h1>
+                    <ul class="item-rules">
+                        <li>1-Click instant play</li>
+                        <li>No Download</li>
+                        <li>1000s of supported online games</li>
                     </ul>
+                    <div class="btn-group">
+                        <button class="btn-primary">Sign In</button>
+                        <button class="btn-sea-blue">Go Rogue</button>
+                    </div>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/Group 18.png" alt="">
                 </div>
             </div>
-        </nav>
+        </div>
     </header>
-    <!-- header section end -->
 
+    <!-- main section start -->
+    <main class="main-section">
+        <!-- online games section start -->
+        <section class="games-funny-videos">
+            <h3 class="section-title">Online Games <span class="text-gradient">Funny Videos</span></h3>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="video-items">
+                <div class="video-box">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <p class="video-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="video-box">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <p class="video-caption">Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="video-box">
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <p class="video-caption">Breaking game records like OG</p>
+                </div>
+                <div class="video-box">
+                    <img src="./images/Rectangle 6.png" alt="">
+                    <p class="video-caption">Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </section>
+        <!-- online games section end -->
+    </main>
 </body>
 </html>
