hero section added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamer Zone</title>
+    <title>Gamer</title>
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
@@ -79,6 +79,24 @@
             </div>
         </section>
         <!-- online games section end -->
+
+        <!-- hero section start -->
+        <section class="hero-section">
+            <div class="hero-content">
+                <h3 class="section-title"><span class="text-gradient">Play Instantly,</span><br>
+                    No Downloads<br>
+                    No Installs.
+                </h3>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="hero-img">
+                <img src="images/Rectangle 55.png" alt="">
+                <div class="inner-img">
+                    <img src="images/Rectangle 66.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- hero section end -->
     </main>
 </body>
 </html>
