game link sectio added

--- a/index.html
+++ b/index.html
@@ -97,6 +97,46 @@
             </div>
         </section>
         <!-- hero section end -->
+        <section class="games-btn-link-section">
+            <div class="btn-link-container">
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <p>Action Games</p>
+                </button>
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 12.png" alt="">
+                    <p>Action Games</p>
+                </button>
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 13.png" alt="">
+                    <p>Action Games</p>
+                </button>
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 14.png" alt="">
+                    <p>Action Games</p>
+                </button>
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 15.png" alt="">
+                    <p>Action Games</p>
+                </button>
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 16.png" alt="">
+                    <p>Action Games</p>
+                </button>
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 17.png" alt="">
+                    <p>Action Games</p>
+                </button>
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 18.png" alt="">
+                    <p>Action Games</p>
+                </button>
+                <button class="btn-game-link">
+                    <img src="images/Rectangle 19.png" alt="">
+                    <p>Action Games</p>
+                </button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
