footer section added

--- a/index.html
+++ b/index.html
@@ -90,13 +90,15 @@
                 <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
             </div>
             <div class="hero-img">
-                <img src="images/Rectangle 55.png" alt="">
+                <img src="./images/Rectangle 55.png" alt="">
                 <div class="inner-img">
-                    <img src="images/Rectangle 66.png" alt="">
+                    <img src="./images/Rectangle 66.png" alt="">
                 </div>
             </div>
         </section>
         <!-- hero section end -->
+
+        <!-- game link section start -->
         <section class="games-btn-link-section">
             <div class="btn-link-container">
                 <button class="btn-game-link">
@@ -137,6 +139,39 @@
                 </button>
             </div>
         </section>
+        <!-- game link section end -->
     </main>
+    <!-- Footer section -->
+    <footer class="footer-section">
+        <div class="footer-container">
+            <div class="logo">
+                <img src="images/gamer-logo.png" alt="">
+                <h2><span>G</span>amer</h2>
+            </div>
+            <ul class="footer-menu footer-game-link-menu">
+                <li><a href="#">Our Story</a></li>
+                <li><a href="#">Games</a></li>
+                <li><a href="#">Web Games</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">My Account</a></li>
+            </ul>
+            <div class="social-icon">
+                <img src="./images/twitter 1.png" alt="">
+                <img src="./images/facebook 1.png" alt="">
+                <img src="./images/youtube.png" alt="">
+                <img src="./images/linkedin 1.png" alt="">
+                <img src="./images/instagram 1.png" alt="">
+                <img src="./images/apple 1.png" alt="">
+            </div>
+            <ul class="footer-menu terms-and-condition-menu">
+                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Cookie Policy</a></li>
+                <li><a href="#">Privacy Settings</a></li>
+            </ul>
+            <p>&copy;Designed By SIFAT</p>
+        </div>
+    </footer>
 </body>
 </html>
