--- a/index.html
+++ b/index.html
@@ -61,18 +61,42 @@
             <p>A Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="video-items">
                 <div class="video-box">
+                    <div class="overlay-watch-icon">
+                        <div>
+                            <img src="./images/youtube.png" alt="">
+                            <p>Watch Now</p>
+                        </div>
+                    </div>
                     <img src="./images/Rectangle 4.png" alt="">
                     <p class="video-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div class="video-box">
+                    <div class="overlay-watch-icon">
+                        <div>
+                            <img src="./images/youtube.png" alt="">
+                            <p>Watch Now</p>
+                        </div>
+                    </div>
                     <img src="./images/Rectangle 5.png" alt="">
                     <p class="video-caption">Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="video-box">
+                    <div class="overlay-watch-icon">
+                        <div>
+                            <img src="./images/youtube.png" alt="">
+                            <p>Watch Now</p>
+                        </div>
+                    </div>
                     <img src="./images/Rectangle 7.png" alt="">
                     <p class="video-caption">Breaking game records like OG</p>
                 </div>
                 <div class="video-box">
+                    <div class="overlay-watch-icon">
+                        <div>
+                            <img src="./images/youtube.png" alt="">
+                            <p>Watch Now</p>
+                        </div>
+                    </div>
                     <img src="./images/Rectangle 6.png" alt="">
                     <p class="video-caption">Busted gaming on school laptop, but you are still lit.</p>
                 </div>
