single bonus part added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
 
     <!-- main section start -->
     <main class="main-section">
+        <!-- we are gamer section start -->
+        <section class="we-are-gamer-section">
+            <div class="we-are-gamer-container">
+                <div class="we-are-gamer-content">
+                    <h3 class="section-title"><span class="text-gradient">We are gamer</span>
+                    </h3>
+                    <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                    <button class="btn-primary">know more</button>
+                    <div class="caption-title">
+                        <p class="read-more">Our purpose...</p>
+                        <h4 class="quote">“unleash the gamer in everyone”</h4>
+                    </div>
+                </div>
+                <div class="we-are-gamer-img">
+                    <img src="./images/pngwing 4.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- we are gamer section end -->
         <!-- online games section start -->
         <section class="games-funny-videos">
             <h3 class="section-title">Online Games <span class="text-gradient">Funny Videos</span></h3>
