game link some change

--- a/index.html
+++ b/index.html
@@ -150,35 +150,35 @@
                 </button>
                 <button class="btn-game-link">
                     <img src="images/Rectangle 12.png" alt="">
-                    <p>Action Games</p>
+                    <p>Adventure Games</p>
                 </button>
                 <button class="btn-game-link">
                     <img src="images/Rectangle 13.png" alt="">
-                    <p>Action Games</p>
+                    <p>Arcade Games</p>
                 </button>
                 <button class="btn-game-link">
                     <img src="images/Rectangle 14.png" alt="">
-                    <p>Action Games</p>
+                    <p>Educational Games</p>
                 </button>
                 <button class="btn-game-link">
                     <img src="images/Rectangle 15.png" alt="">
-                    <p>Action Games</p>
+                    <p>Word Games</p>
                 </button>
                 <button class="btn-game-link">
                     <img src="images/Rectangle 16.png" alt="">
-                    <p>Action Games</p>
+                    <p>Role Palying Games</p>
                 </button>
                 <button class="btn-game-link">
                     <img src="images/Rectangle 17.png" alt="">
-                    <p>Action Games</p>
+                    <p>Music & Audio Games</p>
                 </button>
                 <button class="btn-game-link">
                     <img src="images/Rectangle 18.png" alt="">
-                    <p>Action Games</p>
+                    <p>Puzzle Games</p>
                 </button>
                 <button class="btn-game-link">
                     <img src="images/Rectangle 19.png" alt="">
-                    <p>Action Games</p>
+                    <p>Strategy Games</p>
                 </button>
             </div>
         </section>
